--- a/.github/workflows/folia.yml
+++ b/.github/workflows/folia.yml
@@ -33,6 +33,7 @@ jobs:
           git clone https://github.com/PaperMC/Folia
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
+          git checkout dev/1.20.2
           cd Folia
           ./gradlew applyPatches
           ./gradlew createReobfPaperclipJar
