--- a/.github/workflows/folia.yml
+++ b/.github/workflows/folia.yml
@@ -26,6 +26,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+        with:
+          repository: 'PaperMC/Folia'
+          ref: 'dev/1.20.2' # Specify the branch here
 
       # Runs a set of commands using the runners shell
       - name: 'Build Folia .jar'
@@ -33,7 +36,6 @@ jobs:
           git clone https://github.com/PaperMC/Folia
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
-          git checkout dev/1.20.2
           cd Folia
           ./gradlew applyPatches
           ./gradlew createReobfPaperclipJar
