--- a/.github/workflows/folia.yml
+++ b/.github/workflows/folia.yml
@@ -27,13 +27,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
         with:
-          repository: 'PaperMC/Folia'
           ref: 'dev/1.20.2' # Specify the branch here
 
       # Runs a set of commands using the runners shell
       - name: 'Build Folia .jar'
         run: |
-          git clone https://github.com/PaperMC/Folia
+          git clone --single-branch --branch dev/1.20.2 https://github.com/PaperMC/Folia
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
           cd Folia
