--- a/.github/workflows/folia.yml
+++ b/.github/workflows/folia.yml
@@ -30,7 +30,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: 'Build Folia .jar'
         run: |
-          git clone --branch dev/1.20.2 https://github.com/PaperMC/Folia
+          git clone https://github.com/PaperMC/Folia/tree/dev/1.20.2
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
           cd Folia
